change python venvs

--- a/ubuntu-bootstrap/templates/.bashrc.j2
+++ b/ubuntu-bootstrap/templates/.bashrc.j2
@@ -120,7 +120,6 @@ alias rot13="tr '[A-Za-z]' '[N-ZA-Mn-za-m]'"
 
 export EDITOR=vim
 
+source ~/venvs/default/bin/activate
 # DEV Env
 alias toDev={{ ansible_local.env.dev.alias }}
-source {{ ansible_local.env.dev.source }}
-
