Add export nocows to bashrc

--- a/ubuntu-bootstrap/templates/.bashrc.j2
+++ b/ubuntu-bootstrap/templates/.bashrc.j2
@@ -123,3 +123,5 @@ export EDITOR=vim
 source ~/venvs/default/bin/activate
 # DEV Env
 alias toDev={{ ansible_local.env.dev.alias }}
+
+export ANSIBLE_NOCOWS=1
